--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL = 'mongodb+srv://hulujen:Khulugen.1017@converdeez.iaoaqin.mongodb.net/converdeez'
+CLOUDINARY_CLOUD_NAME = 'dvxzqlgsv'
+CLOUDINARY_API_KEY = '542571816314963'
+CLOUDINARY_API_SECRET = 'xSlgL8YA9zi5IPXoErT04hHEnQk'
