--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@as-integrations/next": "^3.0.0",
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.7",
+    "cloudinary": "^2.1.0",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "graphql": "^16.8.1",
