--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.7",
     "cloudinary": "^2.1.0",
+    "expo-image-picker": "^14.7.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "graphql": "^16.8.1",
